[DM-23548] Add diagram of Vault configuration
Use the Python diagrams library as an experiment and generate a
diagram of the Vault deployment in Roundtable.  Include that in
the tech note.

--- a/_static/README
+++ b/_static/README
@@ -6,3 +6,6 @@ _static/ directory. The reST syntax for adding the image is
     :target: http://target.link/url
 
     Caption text.
+
+To regenerate vault.png, run python vault.py.  At some point this should
+be automated as part of the document build process.
